[project]
name = "llm-code-review"
version = "0.1.0"
description = "A lightweight CLI that uses large‑language models to review Git diffs and suggest concrete fixes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "llm>=0.25",
    "pyinstaller>=6.13.0",
    "rich>=14.0.0",
]
